--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="icon" href="img/favicon.png" type="image/png">
+        <link rel="icon" href="img/favicon2.png" type="image/png">
         <title>JurisERP - Legal Management System</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
@@ -28,7 +28,7 @@
             	<nav class="navbar navbar-expand-lg navbar-light">
 					<div class="container box_1620">
 						<!-- Brand and toggle get grouped for better mobile display -->
-						<a class="navbar-brand logo_h" href="index.html"><img src="img/logo/logo-juriserp/logo-juriserp-tr.png" alt="" style="height: 70px; width:240px;"></a>
+						<a class="navbar-brand logo_h" href="index.html"><img src="img/logo/logo-juriserp/logo-juriserp-tr.png" alt="" style="height: 58px; width:200px;"></a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -282,7 +282,7 @@
 							</div>
 							<div class="row">
 								<div class="col-12">		
-									<div class="col-md-12 text-right">
+									<div class="col-md-12 text-center">
 										<button type="submit" value="submit" class="btn submit_btn">Send Message</button>
 									</div>
 								</div>
