--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             	<nav class="navbar navbar-expand-lg navbar-light">
 					<div class="container box_1620">
 						<!-- Brand and toggle get grouped for better mobile display -->
-						<a class="navbar-brand logo_h" href="index.html"><img src="img/logo/logo-juriserp/logo-juriserp-tr.png" alt="" style="height: 58px; width:200px;"></a>
+						<a class="navbar-brand logo_h" href="index.html"><img src="img/logo/logo-juriserp/logo-juriserp-tr-start.png" alt="" style="height: 58px; width:200px;"></a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -36,7 +36,7 @@
 						</button>
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-							<ul class="nav navbar-nav menu_nav justify-content-center">
+							<ul class="nav navbar-nav menu_nav justify-content-end">
 								<li class="nav-item active"><a class="page-scroll" href="index.html">Home</a></li> 
 								<li class="nav-item"><a class="page-scroll" href="#aboutus">About</a></li> 
 								<li class="nav-item"><a class="page-scroll" href="#features">Features</a>
@@ -112,7 +112,7 @@
         	<div class="container">
         		<div class="made_life_inner">
 					<div class="row made_life_text">
-						<div class="col-lg-6">
+						<div class="col-lg-5">
 							<div class="left_side_text">
 								<h3>We’ve made a life <br />that will change you</h3>
 								<h6>JurisERP delivers Enterprise Legal Management for midsize corporations, with the
@@ -120,9 +120,9 @@
 								<a class="main_btn" href="#contactus">Request for a demo</a>
 							</div>
 						</div>
-						<div class="col-lg-6">
+						<div class="col-lg-7">
 							<div class="chart_img">
-								<img class="img-fluid" src="img/about.svg" alt="">
+								<img class="img-fluid rounded" src="img/about-img.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -145,13 +145,13 @@
         		<div class="made_life_inner">
 					<ul class="nav nav-tabs" id="myTab" role="tablist">
 						<li class="nav-item">
-						<a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Reporting</a>
+						<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Reporting</a>
 						</li>
 						<li class="nav-item">
 						<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Notifications</a>
 						</li>
 						<li class="nav-item">
-						<a class="nav-link active" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Task Management</a>
+						<a class="nav-link " id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Task Management</a>
 						</li>
 						<li class="nav-item">
 						<a class="nav-link" id="edge-tab" data-toggle="tab" href="#edge" role="tab" aria-controls="edge" aria-selected="false">Calendar</a>
@@ -167,7 +167,7 @@
 								</div>
 								<div class="col-lg-6">
 									<div class="chart_img">
-										<img class="img-fluid" src="img/features/reporting.svg" alt="">
+										<img class="img-fluid rounded" src="img/features/reporting-img.jpg" alt="">
 									</div>
 								</div>
 							</div>
@@ -181,7 +181,7 @@
 								</div>
 								<div class="col-lg-6">
 									<div class="chart_img">
-										<img class="img-fluid" src="img/features/noti.svg" alt="">
+										<img class="img-fluid rounded" src="img/features/notification-img.jpg" alt="">
 									</div>
 								</div>
 							</div>
@@ -195,7 +195,7 @@
 								</div>
 								<div class="col-lg-6">
 									<div class="chart_img">
-										<img class="img-fluid" src="img/features/task.svg" alt="">
+										<img class="img-fluid rounded" src="img/features/taskmanagement-img.jpg" alt="">
 									</div>
 								</div>
 							</div>
@@ -209,7 +209,7 @@
 								</div>
 								<div class="col-lg-6">
 									<div class="chart_img">
-										<img class="img-fluid" src="img/features/calendar.svg" alt="">
+										<img class="img-fluid rounded" src="img/features/calendar-img.jpg" alt="">
 									</div>
 								</div>
 							</div>
