Change screenshot without background #12

--- a/index.html
+++ b/index.html
@@ -180,62 +180,62 @@
 					</li>
 				</ul>
 				<div class="tab-content" id="myTabContent">
-					<div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
-						<div class="row made_life_text">
-							<div class="col-lg-6">
+					<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+						<div class="row made_life_text align-items-center">
+							<div class="col-lg-5">
 								<div class="left_side_text">
 									<h6>Generate various KPI reports with a click and access your dashboard to
 										efficiently monitor your work.</h6>
 								</div>
 							</div>
-							<div class="col-lg-6">
+							<div class="col-lg-7">
 								<div class="chart_img">
-									<img class="img-fluid rounded" src="img/features/reporting-img.jpg" alt="">
+									<img class="img-fluid rounded shadow" src="img/features/reporting.png" alt="">
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-						<div class="row made_life_text">
-							<div class="col-lg-6">
+						<div class="row made_life_text align-items-center">
+							<div class="col-lg-5">
 								<div class="left_side_text">
 									<h6>Get instant notification for any update and be alerted on-time to achieve your
 										legal tasks.</h6>
 								</div>
 							</div>
-							<div class="col-lg-6">
+							<div class="col-lg-7">
 								<div class="chart_img">
-									<img class="img-fluid rounded" src="img/features/notification-img.jpg" alt="">
+									<img class="img-fluid rounded shadow" src="img/features/noti.png" alt="">
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="tab-pane fade show active" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-						<div class="row made_life_text">
-							<div class="col-lg-6">
+					<div class="tab-pane fade " id="contact" role="tabpanel" aria-labelledby="contact-tab">
+						<div class="row made_life_text align-items-center">
+							<div class="col-lg-5">
 								<div class="left_side_text">
 									<h6>Organize, manage, and collaborate on legal tasks. Track your tasks with our
 										simple and intuitive interface.</h6>
 								</div>
 							</div>
-							<div class="col-lg-6">
+							<div class="col-lg-7">
 								<div class="chart_img">
-									<img class="img-fluid rounded" src="img/features/taskmanagement-img.jpg" alt="">
+									<img class="img-fluid rounded shadow" src="img/features/task.png" alt="">
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="tab-pane fade" id="edge" role="tabpanel" aria-labelledby="edge-tab">
-						<div class="row made_life_text">
-							<div class="col-lg-6">
+						<div class="row made_life_text align-items-center">
+							<div class="col-lg-5">
 								<div class="left_side_text">
 									<h6>Stay reminded and manage appointments, deadlines, and staff meetings on one
 										central calendar. </h6>
 								</div>
 							</div>
-							<div class="col-lg-6">
+							<div class="col-lg-7">
 								<div class="chart_img">
-									<img class="img-fluid rounded" src="img/features/calendar-img.jpg" alt="">
+									<img class="img-fluid rounded shadow" src="img/features/calendar.png" alt="">
 								</div>
 							</div>
 						</div>
